--- a/app/src/main/res/layout/rv_item_news.xml
+++ b/app/src/main/res/layout/rv_item_news.xml
@@ -32,6 +32,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="12dp"
+            android:transitionName="newsWrapper"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
