--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -26,7 +26,7 @@
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="新闻" />
+                android:text="资讯" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
