--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -4,13 +4,13 @@
     <item
         android:id="@+id/nav_homepage"
         android:icon="@drawable/ic_home"
-        android:title="@string/Homepage" />
+        android:title="@string/homepage" />
     <item
         android:id="@+id/nav_friend"
         android:icon="@drawable/ic_friend"
-        android:title="@string/Friend" />
+        android:title="@string/friend" />
     <item
         android:id="@+id/nav_me"
         android:icon="@drawable/ic_smile"
-        android:title="@string/Me" />
+        android:title="@string/me" />
 </menu>
