--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,7 +21,7 @@
         android:background="@color/colorPrimary">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/profile_avator"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:elevation="10dp"
@@ -39,7 +39,7 @@
             android:textColor="?android:attr/windowBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_avator" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
