--- a/app/src/main/res/layout/activity_anime_player.xml
+++ b/app/src/main/res/layout/activity_anime_player.xml
@@ -28,11 +28,6 @@
             android:layout_height="wrap_content"
             android:text="简介" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="评论" />
-
     </com.google.android.material.tabs.TabLayout>
 
     <ImageView
@@ -62,12 +57,14 @@
     <TextView
         android:id="@+id/tv_anime_info"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:contentDescription="动漫简介"
         android:text="少女祈祷中"
+        app:layout_constraintBottom_toTopOf="@+id/episode_box"
         app:layout_constraintEnd_toEndOf="@+id/episode_box"
         app:layout_constraintStart_toEndOf="@+id/iv_anime_image"
         app:layout_constraintTop_toBottomOf="@+id/tv_anime_name" />
