--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -5,10 +5,10 @@
         android:id="@+id/nav_homepage"
         android:icon="@drawable/ic_home"
         android:title="@string/homepage" />
-    <item
-        android:id="@+id/nav_friend"
-        android:icon="@drawable/ic_friend"
-        android:title="@string/friend" />
+<!--    <item-->
+<!--        android:id="@+id/nav_friend"-->
+<!--        android:icon="@drawable/ic_friend"-->
+<!--        android:title="@string/friend" />-->
     <item
         android:id="@+id/nav_me"
         android:icon="@drawable/ic_smile"
