--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -9,11 +9,11 @@
         android:name="top.orange233.yizhan.module.homepage.HomepageFragment"
         android:label="HomepageFragment"
         tools:layout="@layout/fragment_homepage" />
-    <fragment
-        android:id="@+id/nav_friend"
-        android:name="top.orange233.yizhan.module.friend.FriendFragment"
-        android:label="FriendFragment"
-        tools:layout="@layout/fragment_friend" />
+<!--    <fragment-->
+<!--        android:id="@+id/nav_friend"-->
+<!--        android:name="top.orange233.yizhan.module.friend.FriendFragment"-->
+<!--        android:label="FriendFragment"-->
+<!--        tools:layout="@layout/fragment_friend" />-->
     <fragment
         android:id="@+id/nav_me"
         android:name="top.orange233.yizhan.module.profile.ProfileFragment"
